# matrix-market-suite

./: .gitignore  CMakeLists.txt  MM-Suite.c  Makefile  Makefile.in  README.md
MPI/: MM-Suite-MPI.c  Makefile  Makefile.in
MPI/operations/: DMxV-MPI.c  DMxV-MPI.h  Makefile
MPI/solvers/: ConjugateGradient-MPI.c  ConjugateGradient-MPI.h  ConjugateGradientSolver-MPI.c  ConjugateGradientSolver-MPI.h  Makefile
MPI/utils/: Makefile  utils-MPI.c  utils-MPI.h
cmake/modules/: FindLAPACKE.cmake
io/: CreateDenseMatrix.c  CreateDenseMatrix.h  CreateDenseMatrixGeneral.c  CreateDenseMatrixGeneral.h  CreateDenseMatrixGeneralDiagonallyDominant.c  CreateDenseMatrixGeneralDiagonallyDominant.h  CreateDenseMatrixGeneralDiagonallyDominantRowLine.c  CreateDenseMatrixGeneralDiagonallyDominantRowLine.h  CreateDenseMatrixGeneralRowLine.c  CreateDenseMatrixGeneralRowLine.h  CreateDenseMatrixSymmetric.c  CreateDenseMatrixSymmetric.h  CreateDenseMatrixSymmetricDiagonallyDominant.c  CreateDenseMatrixSymmetricDiagonallyDominant.h  CreateDenseMatrixSymmetricDiagonallyDominantRowLine.c  CreateDenseMatrixSymmetricDiagonallyDominantRowLine.h  CreateDenseMatrixSymmetricRowLine.c  CreateDenseMatrixSymmetricRowLine.h  CreateDenseVector.c  CreateDenseVector.h  CreateSparseMatrix.c  CreateSparseMatrix.h  CreateSparseMatrixGeneral.c  CreateSparseMatrixGeneral.h  CreateSparseMatrixGeneralGap.c  CreateSparseMatrixGeneralGap.h  Makefile
lib/CBLAS/: Makefile  Makefile.in  Makefile.in.back
operations/: DMxDM.c  DMxDM.h  DMxV.c  DMxV.h  LUDecomposition.c  LUDecomposition.h  Makefile  VectorOperations.c  VectorOperations.h  basic.h
solvers/: ConjugateGradient.c  ConjugateGradient.h  ConjugateGradientSolver.c  ConjugateGradientSolver.h  ConjugateGradientSolverBasic.c  ConjugateGradientSolverBasic.h  Jacobi.c  Jacobi.h  JacobiSolver.c  JacobiSolver.h  Makefile
src/CUDA/: MM-Suite-CUDA.cu
src/MPI/: MM-Suite-MPI.c
src/io/: CreateDenseMatrix.c  CreateDenseMatrixGeneral.h  CreateDenseMatrixGeneralDiagonallyDominant.c  CreateDenseMatrixGeneralDiagonallyDominant.h  CreateDenseMatrixGeneralDiagonallyDominantRowLine.c  CreateDenseMatrixGeneralDiagonallyDominantRowLine.h  CreateDenseMatrixGeneralRowLine.h  CreateDenseMatrixSymmetric.h  CreateDenseMatrixSymmetricDiagonallyDominant.c  CreateDenseMatrixSymmetricDiagonallyDominant.h  CreateDenseMatrixSymmetricDiagonallyDominantRowLine.c  CreateDenseMatrixSymmetricDiagonallyDominantRowLine.h  CreateDenseMatrixSymmetricRowLine.c  CreateDenseMatrixSymmetricRowLine.h  CreateDenseVector.h  (+3 more)
utils/: LUValues.c  LUValues.h  Makefile  mmio.c  mmio.h  utils.c  utils.h
(+35 files in other folders)
